# HPC_subset_sum_problem

./: CMakeLists.txt  README.md  benchmark.c  constants.c  hill-climbing-parallel.c  hill-climbing.c  main  main.c  main.cpp  utils.c
.devcontainer/: devcontainer.json
